[package]
name = "mpi-traffic"
version = "0.0.0"
description = "Traffic simulation with MPI."
repository = "https://github.com/linyinfeng/mpi-traffic"
license = "MIT"
readme = "README.md"
authors = [
    "Lin Yinfeng <lin.yinfeng@outlook.com>",
    "samhaosss <sunhaoyl@outlook.com>"
]
edition = "2018"

[dependencies]
piston_window = "*"
log = "*"
env_logger = "*"
bitflags = "*"
quick-error = "*"
rand="*"
structopt="*"
serde = { version = "*", features = ["derive"] }
bincode = "*"
mpi = "*"
