[package]
name = "mpi-traffic"
version = "0.0.0"
description = "Traffic simulation with MPI."
repository = "https://github.com/linyinfeng/mpi-traffic"
license = "MIT"
readme = "README.md"
authors = [
    "Lin Yinfeng <lin.yinfeng@outlook.com>",
    "samhaosss <sunhaoyl@outlook.com>"
]
edition = "2018"

[dependencies]
piston_window = "0.118.0"
log = "0.4.14"
env_logger = "0.8.3"
bitflags = "1.2.1"
quick-error = "2.0.0"
rand= "0.8.3"
structopt= "0.3.21"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
mpi = "0.5.4"
